# cim-domain-agent

./: .env.example  .gitignore  AGENT_CONVERSATION_SUBJECTS.md  AGENT_DEFINITION_DESIGN.md  AGENT_LOADING_DESIGN.md  AGENT_REFERENCE_INDEX.md  AGENT_REFERENCE_SUMMARY.md  AGENT_REFERENCE_THEORY.md  AGENT_UPDATES.md  CLAUDE_DEMO_README.md  COMPLETION_SUMMARY.md  CONVERSATION_DEPLOYMENT_SUCCESS.md  CONVERSION_PROGRESS.md  CORRECT_AGENT_CONFIG_DESIGN.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  DONE.md  IMPLEMENTATION_COMPLETE.md  INBOX_PATTERN_FIX.md  LANGUAGE_ONTOLOGY.md  PROOF_OF_SYSTEM_PROMPT.md  README.md  READY_TO_DEPLOY_INBOX_FIX.md  READY_TO_PROVE.md  REFACTORING_NEEDED.md  REFERENCE_THEORY_COMPARISON.md  RUN_THIS_TO_PROVE_IT.md  START_HERE.md  STATUS.md  SUBJECT_ALGEBRA_DESIGN.md  SUBJECT_DESIGN_SUMMARY.md  SUBJECT_DOCUMENTATION_INDEX.md  SUBJECT_MIGRATION_GUIDE.md  SUBJECT_PATTERNS_COMPARISON.md  SUBJECT_QUICK_REFERENCE.md  SUBJECT_REFACTORING_GUIDE.md  SYSTEM_PROMPT_INTEGRATION.md  (+21 more)
agents/: AGENT_ONTOLOGY.md  AGENT_SCHEMA.md  AGENT_STATUS.md  CREATION_REPORT.md  MIGRATION_PLAN.md  README.md  TEMPLATE.md  UNIFIED_SCHEMA.md  act-expert.md  act-expert.v2.md  bdd-expert.md  cim-domain-expert.md  cim-expert.md  cim-ui-layer-expert.md  conceptual-spaces-expert.md  create_remaining_agents.sh  create_ui_and_domain_agents.sh  ddd-expert.md  description-expert.md  domain-expert.md  domain-ontologist-researcher.md  egui-ui-expert.md  event-storming-expert.md  fp-expert.md  frp-expert.md  git-expert.md  graph-expert.md  iced-ui-expert.md  language-expert.md  location-expert.md  nats-expert.md  network-expert.md  nix-expert.md  org-expert.md  people-expert.md  qa-expert.md  sage.md  sdlc-distributed-expert.md  sdlc-expert.md  subject-expert.md  (+1 more)
agents/act-expert/: ACT_ROLE_IN_CIM.md  PROGRESS.md  RAG_LIBRARY_DESIGN.md  README.md  TENSOR_DESIGN.md
diagrams/: agent_reference_theory.md
doc/: TECHNICAL_DEBT.md  api.md  cim-dialog-integration.md  user-stories.md
doc/deployment/: DGX1_DEPLOYMENT_COMPLETE.md  DGX1_DEPLOYMENT_STATUS.md  DGX_AGENT_CONFIGURATIONS.md  DGX_CLUSTER_DEPLOYMENT_COMPLETE.md  DGX_DEPLOYMENT_CHECKLIST.md  DGX_DEPLOYMENT_REPORT.md  SPRINT_5_1_3_CONFIG_PREPARATION.md  SPRINT_5_1_VERIFICATION_REPORT.md  SPRINT_5_2_WAVE_1_DEPLOYMENT.md  UNIFIED_SUBJECT_ROLLOUT.md
doc/plan/: readme.md
doc/plans/: SPRINT_5_SUMMARY.md  sprint_5_plan.md  unified-subject-architecture.md
docs/: CONFIG_PARSER_SUMMARY.md  config_parser_architecture.md  config_parser_design.md
examples/: agent_reference_pattern.rs  ai_agent_demo.rs  ai_conceptual_integration_demo.rs  ai_conversation_3d_demo.rs  ai_conversation_tui.rs  ai_event_driven_integration.rs  ai_graph_analysis_integration.rs  ai_powered_workflow_automation.rs  ai_provider_demo.rs  ai_provider_demo_simple.rs  ai_real_providers_demo.rs  ai_visual_bevy_demo.rs  ai_visual_demo.rs  ai_visual_demo_simple.rs  basic_agent.rs  bevy_3d_chat_interface.rs  cim_3d_graph_demo.rs  claude_advanced_demo.rs  claude_conversation_demo.rs  claude_dialog_demo.rs  conceptual_reasoning_demo.rs  config_parser_demo.rs  interactive_ai_graph_demo.rs  interactive_bevy_demo.rs  interactive_chat_demo.rs  production_embeddings_demo.rs  real_ai_provider_demo.rs  real_ai_providers_demo.rs  semantic_search_demo.rs  simple_ai_demo.rs  simple_bevy_graph_demo.rs  test_all_providers.rs  test_ollama_only.rs
metrics/wave1/: metrics-20260123-155424.json
monitoring/: ACCELERATED_DEPLOYMENT_COMPLETE.md  CHECKPOINT_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_VERIFICATION.txt  MONITORING_SETUP.md  MONITORING_SUMMARY.md  README.md  SPRINT_5_3_EXECUTION_CHECKLIST.md  SPRINT_5_4_EXECUTION_CHECKLIST.md  SPRINT_5_5_STABILITY_PLAN.md  SPRINT_5_MASTER_STATUS.md  SPRINT_5_T3H_SUMMARY.md  T6H_CHECKPOINT_PROCEDURE.md  TEST_FLEET_STATUS.md  WAVE1_MONITORING_STATUS.md  WAVE2_MONITORING_PLAN.md  WAVE2_PREPARATION_COMPLETE.md  WAVE3_MONITORING_PLAN.md  WAVE3_PREPARATION_COMPLETE.md  alert-system.sh  checkpoint-collect.sh  collect-metrics.sh  monitor-logs.sh  monitor-subjects.sh  wave1-monitor.sh
monitoring/metrics/: metrics-20260123-161247.json
nix/: DEPLOYMENT.md  README.md  cim-agents-container.nix  cim-agents.service  deploy-agents-container.sh
nix/examples/: agent-deployment-extra-container.nix  extra-container-advanced.nix
nix/modules/: agent-deployment.nix  agent.nix
retrospectives/: sprint_0.md  sprint_1.md  sprint_3.md  sprint_4.md  sprint_5.1_completion.md
scripts/: deploy-agent-updates.sh  deploy-dgx.sh  sprint5_backup_configs.sh  sprint5_enable_unified.sh  sprint5_verify_config.sh
src/: lib.rs  subjects.rs
src/adapters/: genai_adapter.rs  mod.rs  provider_registry.rs
src/aggregate/: agent_definition.rs.old  mod.rs  model_configuration.rs
src/aggregate_new/: mod.rs
src/ai_providers/: anthropic.rs  config.rs  mock.rs  mod.rs  ollama.rs  openai.rs  provider_manager.rs
src/capabilities/: capability.rs  lattice.rs  mod.rs  requirements.rs
src/commands/: activate_agent.rs  ai_commands.rs  decommission_agent.rs  deploy_agent.rs  disable_tools.rs  enable_tools.rs  grant_permissions.rs  mod.rs  model_configuration.rs  revoke_permissions.rs  suspend_agent.rs  update_capabilities.rs
src/commands_new/: activate_agent.rs  decommission_agent.rs  deploy_agent.rs  disable_tools.rs  enable_tools.rs  grant_permissions.rs  mod.rs  revoke_permissions.rs  suspend_agent.rs  update_capabilities.rs  update_configuration.rs
src/components/: agent.rs  authentication.rs  capabilities.rs  constraints.rs  metadata.rs  mod.rs  permissions.rs  status.rs  (+1 more)
tests/: agent_tests.rs  agent_user_story_tests.rs  ai_integration_test.rs  ai_provider_integration_tests.rs  ai_provider_tests.rs  command_handler_tests.rs  conceptual_integration_tests.rs  config_minimal_test.rs  config_parser_integration.rs  ecs_integration.rs  nats_conversation_integration.rs  nats_model_configuration_integration.rs  real_ai_provider_integration_test.rs  real_provider_integration_tests.rs  semantic_search_tests.rs  system_prompt_integration_test.rs
(+151 files in other folders)
