[package]
name = "cim-domain-agent"
version = "0.8.1"
edition = "2021"

[dependencies]
# Core dependencies - v0.8.1 standards
uuid = { version = "1.11", features = ["v7", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# NATS - v0.8.1 standard
async-nats = "0.38"
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
tracing-subscriber = "0.3"

# Domain dependencies - v0.8.1 (using git until published)
cim-domain = { path = "../cim-domain" }

# Infrastructure adapters (Ports & Adapters pattern)
# These are optional - only needed when using specific capabilities
reqwest = { version = "0.11", features = ["json", "stream"], optional = true }
qdrant-client = { version = "1.12", features = ["download_snapshots"], optional = true }
dotenvy = { version = "0.15", optional = true }

# Legacy dependencies (will be removed or made optional)
# cim-graph = { git = "https://github.com/TheCowboyAI/cim-graph.git", branch = "main", optional = true }
# cim-domain-spaces - removed (private repo, not needed for core domain)

# For semver in metadata component
semver = "1.0"

# For colored terminal output in demos
colored = { version = "2.0", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3"
tokio-test = "0.4"
crossterm = "0.28"
mockall = "0.11"
dotenv = "0.15"
pollster = "0.3"

[[example]]
name = "semantic_search_demo"

[[example]]
name = "production_embeddings_demo"

# AI/ML dependencies (optional for now)
# These will be activated when implementing actual AI integrations
# openai = { version = "0.1", optional = true }
# ollama-rs = { version = "0.1", optional = true }
# candle = { version = "0.3", optional = true }
# ort = { version = "1.15", optional = true }  # ONNX Runtime

[features]
default = []

# Capability Adapters (Ports & Adapters pattern)
# Core domain is independent of these - they're infrastructure concerns
ai-providers = ["reqwest", "dotenvy"]
vector-store = ["qdrant-client"]
examples = ["colored", "dotenvy"]

# Specific AI provider adapters
adapter-openai = ["ai-providers"]
adapter-anthropic = ["ai-providers"]
adapter-ollama = ["ai-providers"]
adapter-mock = []  # Always available for testing

# Convenience feature for all adapters
all-adapters = ["adapter-openai", "adapter-anthropic", "adapter-ollama", "vector-store"]

# Service binaries
[[bin]]
name = "agent-service"
path = "src/bin/agent-service.rs"

[[example]]
name = "ai_agent_demo"
path = "examples/ai_agent_demo.rs"

[[example]]
name = "ai_conceptual_integration_demo"
path = "examples/ai_conceptual_integration_demo.rs"

[[example]]
name = "ai_real_providers_demo"
path = "examples/ai_real_providers_demo.rs"

[[example]]
name = "real_ai_provider_demo"
path = "examples/real_ai_provider_demo.rs"

[[example]]
name = "claude_conversation_demo"
path = "examples/claude_conversation_demo.rs"

[[example]]
name = "claude_dialog_demo"
path = "examples/claude_dialog_demo.rs"

[[example]]
name = "ai_visual_demo"
path = "examples/ai_visual_demo.rs"

[[example]]
name = "ai_visual_demo_simple"
path = "examples/ai_visual_demo_simple.rs"

[[example]]
name = "ai_graph_analysis_integration"
path = "examples/ai_graph_analysis_integration.rs"

[[example]]
name = "ai_provider_demo_simple"
path = "examples/ai_provider_demo_simple.rs"

[[example]]
name = "claude_advanced_demo"
path = "examples/claude_advanced_demo.rs"

[[example]]
name = "test_all_providers"
path = "examples/test_all_providers.rs"

[[example]]
name = "test_ollama_only"
path = "examples/test_ollama_only.rs"
