[package]
name = "cim-domain-agent"
version = "0.10.0-alpha.1"
edition = "2021"
description = "Agent domain for CIM - Person's automaton for AI model interaction via NATS with MealyStateMachine lifecycle"
license = "MIT"

[dependencies]
# Core dependencies
uuid = { version = "1.11", features = ["v7", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tracing = "0.1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
bitflags = { version = "2.7", features = ["serde"] }
once_cell = "1.19"
itertools = "0.14"

# NATS
async-nats = "0.44"
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
tracing-subscriber = "0.3"

# Domain dependencies
cim-domain = { path = "../cim-domain" }

# Agent definition dependencies
semver = { version = "1.0", features = ["serde"] }
cid = "0.11"
multihash = "0.19"
serde_ipld_dagcbor = "0.6"
sha2 = "0.10"

# Infrastructure adapters (Ports & Adapters pattern)
# These are optional - only needed when using specific capabilities
reqwest = { version = "0.11", features = ["json", "stream"], optional = true }
qdrant-client = { version = "1.12", features = ["download_snapshots"], optional = true }
dotenvy = { version = "0.15", optional = true }

# Multi-provider AI library
genai = { version = "0.5", optional = true }

# For colored terminal output in demos
colored = { version = "2.0", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3"
tokio-test = "0.4"
mockall = "0.11"
dotenv = "0.15"
pollster = "0.3"
serial_test = "3.2"

[features]
default = []

# Capability Adapters (Ports & Adapters pattern)
# Core domain is independent of these - they're infrastructure concerns
ai-providers = ["reqwest", "dotenvy"]
vector-store = ["qdrant-client"]
examples = ["colored", "dotenvy"]

# genai-based multi-provider adapter (recommended)
genai-adapter = ["genai", "dotenvy"]

# Specific AI provider adapters (legacy)
adapter-openai = ["ai-providers"]
adapter-anthropic = ["ai-providers"]
adapter-ollama = ["ai-providers"]
adapter-mock = []  # Always available for testing

# Convenience feature for all adapters
all-adapters = ["genai-adapter", "adapter-openai", "adapter-anthropic", "adapter-ollama", "vector-store"]

# Service binaries
[[bin]]
name = "agent-service"
path = "src/bin/agent-service.rs"
